--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+html, body{
+  background-color: #F2F1EF;
+  font-family: 'Raleway', sans-serif;
+  overflow-x: hidden;
+}
 .category-list{
-  background-color: white;
+  background-color: #F2F1EF;
   padding: 50px;
 }
 .category{
-  background-color: black;
+  background-color: #013243;
   border-radius: 20px;
   color: white;
   padding: 30px;
@@ -13,12 +19,16 @@
   padding: 0px;
   margin: 0px;
 }
+.grade h1{
+  margin: 0px;
+}
 .App-title{
   margin: 0px;
-  padding: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 .App-header{
-  background-color: black;
+  background-color: #013243;
   color: white;
   padding-left: 50px;
   margin-bottom: 50px;
@@ -35,8 +45,101 @@ label, input {
 }
 .category-form{
   color: white;
-  background-color: black;
+  background-color: #013243;
   margin: 50px;
   border-radius: 20px;
   padding: 30px;
+}
+.icon-button{
+  color: white;
+  font-size: 2.0em;
+  background-color: transparent;
+  border: none;
+}
+.icon-button:hover{
+  color: gray;
+}
+.icon-button-small{
+  display: inline;
+  color: white;
+  font-size: 1.0em;
+  background-color: transparent;
+  border: none;
+}
+.icon-button-small:hover{
+  color: gray;
+}
+.grade{
+  color: #013243;
+  padding-left: 50px;
+}
+.footer{
+  background-color: #013243;
+  color: white;
+  padding: 50px;
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+.footer p {
+  margin-top: 0px;
+}
+.footer h1{
+  margin-top: 0px;
+}
+.footer a{
+  color: white;
+  text-decoration: none;
+}
+.footer a:hover{
+  color: gray;
+}
+.footer-left{
+  grid-column: 1 / span 1;
+  width: 100%;
+}
+.footer-right{
+  grid-column: 2 / span 1;
+  display: table-cell;
+  width: 100%;
+}
+@media only screen and (max-width: 500px){
+  .category-list{
+    padding: 20px !important;
+  }
+  .App-header{
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+    font-size: 0.75em !important;
+    margin-bottom: 20px !important;
+    text-align: center !important;
+  }
+  .grade{
+    padding: 20px !important;
+  }
+  .category-form{
+    margin: 20px !important;
+  }
+  input {
+    width: 100% !important;
+  }
+  .footer{
+    display: block !important;
+    padding: 20px !important;
+  }
+  .footer-left{
+    text-align: center !important;
+    margin-bottom: 20px !important;
+  }
+  .footer-right{
+    display: block !important;
+    font-size: 0.75em !important;
+    text-align: center !important;
+  }
+  .footer-right h1{
+    margin-bottom: 0px !important;
+  }
+  .App-title{
+    padding-top: 20px !important;
+    padding-bottom: 20px !important;
+  }
 }
